Fix prelude generator