@@ -1,7 +1,9 @@
 package org.arend.typechecking.subexpr;
 
 import org.arend.core.definition.Definition;
+import org.arend.naming.reference.TCDefReferable;
 import org.arend.term.concrete.Concrete;
+import org.arend.term.group.ConcreteGroup;
 import org.arend.typechecking.TypeCheckingTestCase;
 import org.junit.Test;
 
@@ -10,11 +12,12 @@ import static org.junit.Assert.*;
 public class CorrespondedSubDefTest extends TypeCheckingTestCase {
   @Test
   public void funTermBody() {
-    var referable = resolveNamesDef("\\func f => 0");
-    var def = (Concrete.FunctionDefinition) getDefinition(referable);
+    ConcreteGroup group = resolveNamesDef("\\func f => 0");
+    var def = (Concrete.FunctionDefinition) group.definition();
+    assertNotNull(def);
     Concrete.Expression term = def.getBody().getTerm();
     assertNotNull(term);
-    var accept = def.accept(new CorrespondedSubDefVisitor(term), typeCheckDef(referable));
+    var accept = def.accept(new CorrespondedSubDefVisitor(term), typeCheckDef((TCDefReferable) group.referable()));
     assertNotNull(accept);
     assertEquals("0", accept.proj1.toString());
     assertEquals("0", accept.proj2.toString());
@@ -22,35 +25,38 @@ public class CorrespondedSubDefTest extends TypeCheckingTestCase {
 
   @Test
   public void errorReport() {
-    var referable = resolveNamesDef("\\func f => 0");
-    var def = (Concrete.FunctionDefinition) getDefinition(referable);
+    ConcreteGroup group = resolveNamesDef("\\func f => 0");
+    var def = (Concrete.FunctionDefinition) group.definition();
+    assertNotNull(def);
     Concrete.Expression term = def.getBody().getTerm();
     assertNotNull(term);
     CorrespondedSubDefVisitor visitor = new CorrespondedSubDefVisitor(term);
-    def.accept(visitor, typeCheckDef(referable));
+    def.accept(visitor, typeCheckDef((TCDefReferable) group.referable()));
     // When matching the telescope of `f`, there's an error
     assertEquals(1, visitor.getExprError().size());
-    assertEquals(SubExprError.Kind.Telescope, visitor.getExprError().get(0).getKind());
+    assertEquals(SubExprError.Kind.Telescope, visitor.getExprError().getFirst().getKind());
   }
 
   @Test
   public void funResultType() {
-    var referable = resolveNamesDef("\\func f : Nat => 0");
-    var def = (Concrete.FunctionDefinition) getDefinition(referable);
+    ConcreteGroup group = resolveNamesDef("\\func f : Nat => 0");
+    var def = (Concrete.FunctionDefinition) group.definition();
+    assertNotNull(def);
     assertNotNull(def.getResultType());
-    var accept = def.accept(new CorrespondedSubDefVisitor(def.getResultType()), typeCheckDef(referable));
+    var accept = def.accept(new CorrespondedSubDefVisitor(def.getResultType()), typeCheckDef((TCDefReferable) group.referable()));
     assertNotNull(accept);
     assertEquals("Nat", accept.proj1.toString());
   }
 
   @Test
   public void funParamType() {
-    var referable = resolveNamesDef("\\func f (a : Nat) => a");
-    var def = (Concrete.FunctionDefinition) getDefinition(referable);
+    ConcreteGroup group = resolveNamesDef("\\func f (a : Nat) => a");
+    var def = (Concrete.FunctionDefinition) group.definition();
+    assertNotNull(def);
     assertFalse(def.getParameters().isEmpty());
-    Concrete.Expression type = def.getParameters().get(0).getType();
+    Concrete.Expression type = def.getParameters().getFirst().getType();
     assertNotNull(type);
-    var accept = def.accept(new CorrespondedSubDefVisitor(type), typeCheckDef(referable));
+    var accept = def.accept(new CorrespondedSubDefVisitor(type), typeCheckDef((TCDefReferable) group.referable()));
     assertNotNull(accept);
     assertEquals("Nat", accept.proj1.toString());
     assertEquals("Nat", accept.proj2.toString());
@@ -58,7 +64,7 @@ public class CorrespondedSubDefTest extends TypeCheckingTestCase {
 
   @Test
   public void coelimFun() {
-    var referable = resolveNamesDef(
+    ConcreteGroup group = resolveNamesDef(
       """
         \\instance t : T
           | A => 114
@@ -72,8 +78,9 @@ public class CorrespondedSubDefTest extends TypeCheckingTestCase {
             }
           }
         """);
-    var def = (Concrete.FunctionDefinition) getDefinition(referable);
-    Definition coreDef = typeCheckDef(referable);
+    var def = (Concrete.FunctionDefinition) group.definition();
+    Definition coreDef = typeCheckDef((TCDefReferable) group.referable());
+    assertNotNull(def);
     Concrete.ClassFieldImpl clause = (Concrete.ClassFieldImpl) def.getBody().getCoClauseElements().get(1);
     var accept = def.accept(new CorrespondedSubDefVisitor(clause.implementation), coreDef);
     assertNotNull(accept);
@@ -83,24 +90,25 @@ public class CorrespondedSubDefTest extends TypeCheckingTestCase {
 
   @Test
   public void classes() {
-    var referable = resolveNamesDef(
+    ConcreteGroup group = resolveNamesDef(
       """
         \\class T {
           | A : Nat
           | B : Int
         }
         """);
-    var def = (Concrete.ClassDefinition) getDefinition(referable);
+    var def = (Concrete.ClassDefinition) group.definition();
     {
-      var clause = (Concrete.ClassField) def.getElements().get(0);
-      var accept = def.accept(new CorrespondedSubDefVisitor(clause.getResultType()), typeCheckDef(referable));
+      assertNotNull(def);
+      var clause = (Concrete.ClassField) def.getElements().getFirst();
+      var accept = def.accept(new CorrespondedSubDefVisitor(clause.getResultType()), typeCheckDef((TCDefReferable) group.referable()));
       assertNotNull(accept);
       assertEquals("Nat", accept.proj1.toString());
       assertEquals("Nat", accept.proj2.toString());
     }
     {
       var clause = (Concrete.ClassField) def.getElements().get(1);
-      var accept = def.accept(new CorrespondedSubDefVisitor(clause.getResultType()), typeCheckDef(referable));
+      var accept = def.accept(new CorrespondedSubDefVisitor(clause.getResultType()), typeCheckDef((TCDefReferable) group.referable()));
       assertNotNull(accept);
       assertEquals("Int", accept.proj1.toString());
       assertEquals("Int", accept.proj2.toString());
@@ -109,10 +117,11 @@ public class CorrespondedSubDefTest extends TypeCheckingTestCase {
 
   @Test
   public void classParam() {
-    var referable = resolveNamesDef("\\record T (A B : Nat) {}");
-    var def = (Concrete.ClassDefinition) getDefinition(referable);
+    ConcreteGroup group = resolveNamesDef("\\record T (A B : Nat) {}");
+    var def = (Concrete.ClassDefinition) group.definition();
+    assertNotNull(def);
     var clause = (Concrete.ClassField) def.getElements().get(1);
-    var accept = def.accept(new CorrespondedSubDefVisitor(clause.getResultType()), typeCheckDef(referable));
+    var accept = def.accept(new CorrespondedSubDefVisitor(clause.getResultType()), typeCheckDef((TCDefReferable) group.referable()));
     assertNotNull(accept);
     assertEquals("Nat", accept.proj1.toString());
     assertEquals("Nat", accept.proj2.toString());
@@ -120,24 +129,25 @@ public class CorrespondedSubDefTest extends TypeCheckingTestCase {
 
   @Test
   public void fieldParam() {
-    var referable = resolveNamesDef(
+    ConcreteGroup group = resolveNamesDef(
       """
         \\record T {
           | A : Nat -> Int
           | B (a : \\Sigma) : Nat
         }
         """);
-    var def = (Concrete.ClassDefinition) getDefinition(referable);
+    var def = (Concrete.ClassDefinition) group.definition();
     {
-      var clauseTy = (Concrete.PiExpression) ((Concrete.ClassField) def.getElements().get(0)).getResultType();
-      var accept = def.accept(new CorrespondedSubDefVisitor(clauseTy.getCodomain()), typeCheckDef(referable));
+      assertNotNull(def);
+      var clauseTy = (Concrete.PiExpression) ((Concrete.ClassField) def.getElements().getFirst()).getResultType();
+      var accept = def.accept(new CorrespondedSubDefVisitor(clauseTy.getCodomain()), typeCheckDef((TCDefReferable) group.referable()));
       assertNotNull(accept);
       assertEquals("Int", accept.proj1.toString());
       assertEquals("Int", accept.proj2.toString());
     }
     {
-      Concrete.TypeParameter typeParam = ((Concrete.ClassField) def.getElements().get(1)).getParameters().get(0);
-      var accept = def.accept(new CorrespondedSubDefVisitor(typeParam.getType()), typeCheckDef(referable));
+      Concrete.TypeParameter typeParam = ((Concrete.ClassField) def.getElements().get(1)).getParameters().getFirst();
+      var accept = def.accept(new CorrespondedSubDefVisitor(typeParam.getType()), typeCheckDef((TCDefReferable) group.referable()));
       assertNotNull(accept);
       assertEquals("\\Sigma", accept.proj1.toString());
       assertEquals("\\Sigma", accept.proj2.toString());
@@ -146,7 +156,7 @@ public class CorrespondedSubDefTest extends TypeCheckingTestCase {
 
   @Test
   public void cowithFun() {
-    var referable = resolveNamesDef(
+    ConcreteGroup group = resolveNamesDef(
       """
         \\func t : R \\cowith
           | pre  => 114
@@ -158,8 +168,9 @@ public class CorrespondedSubDefTest extends TypeCheckingTestCase {
             }
           }
         """);
-    var def = (Concrete.FunctionDefinition) getDefinition(referable);
-    Definition coreDef = typeCheckDef(referable);
+    var def = (Concrete.FunctionDefinition) group.definition();
+    Definition coreDef = typeCheckDef((TCDefReferable) group.referable());
+    assertNotNull(def);
     var clause = (Concrete.ClassFieldImpl) def.getBody().getCoClauseElements().get(1);
     var accept = def.accept(new CorrespondedSubDefVisitor(clause.implementation), coreDef);
     assertNotNull(accept);
@@ -169,18 +180,19 @@ public class CorrespondedSubDefTest extends TypeCheckingTestCase {
 
   @Test
   public void elimFun() {
-    var referable = resolveNamesDef(
+    ConcreteGroup group = resolveNamesDef(
       """
         \\func f (a b c : Nat): Nat \\elim b
           | zero => a
           | suc b => c
         """);
-    var def = (Concrete.FunctionDefinition) getDefinition(referable);
-    Definition coreDef = typeCheckDef(referable);
+    var def = (Concrete.FunctionDefinition) group.definition();
+    Definition coreDef = typeCheckDef((TCDefReferable) group.referable());
+    assertNotNull(def);
     var clauses = def.getBody().getClauses();
     assertFalse(clauses.isEmpty());
     {
-      Concrete.Expression expression = clauses.get(0).getExpression();
+      Concrete.Expression expression = clauses.getFirst().getExpression();
       assertNotNull(expression);
       var accept = def.accept(new CorrespondedSubDefVisitor(expression), coreDef);
       assertNotNull(accept);
@@ -199,10 +211,11 @@ public class CorrespondedSubDefTest extends TypeCheckingTestCase {
 
   @Test
   public void dataParam() {
-    var referable = resolveNamesDef("\\data D (a : Nat)");
-    var def = (Concrete.DataDefinition) getDefinition(referable);
+    ConcreteGroup group = resolveNamesDef("\\data D (a : Nat)");
+    var def = (Concrete.DataDefinition) group.definition();
+    assertNotNull(def);
     assertFalse(def.getParameters().isEmpty());
-    var accept = def.accept(new CorrespondedSubDefVisitor(def.getParameters().get(0).getType()), typeCheckDef(referable));
+    var accept = def.accept(new CorrespondedSubDefVisitor(def.getParameters().getFirst().getType()), typeCheckDef((TCDefReferable) group.referable()));
     assertNotNull(accept);
     assertEquals("Nat", accept.proj1.toString());
     assertEquals("Nat", accept.proj2.toString());
@@ -210,10 +223,11 @@ public class CorrespondedSubDefTest extends TypeCheckingTestCase {
 
   @Test
   public void cons() {
-    var referable = resolveNamesDef("\\data D Int | c Nat");
-    var def = (Concrete.DataDefinition) getDefinition(referable);
+    ConcreteGroup group = resolveNamesDef("\\data D Int | c Nat");
+    var def = (Concrete.DataDefinition) group.definition();
+    assertNotNull(def);
     assertFalse(def.getConstructorClauses().isEmpty());
-    var accept = def.accept(new CorrespondedSubDefVisitor(def.getConstructorClauses().get(0).getConstructors().get(0).getParameters().get(0).getType()), typeCheckDef(referable));
+    var accept = def.accept(new CorrespondedSubDefVisitor(def.getConstructorClauses().getFirst().getConstructors().getFirst().getParameters().getFirst().getType()), typeCheckDef((TCDefReferable) group.referable()));
     assertNotNull(accept);
     assertEquals("Nat", accept.proj1.toString());
     assertEquals("Nat", accept.proj2.toString());
